[package]
name = "followers-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
rand = "0.9.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_os = "linux")']
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]